@@ -4,6 +4,10 @@ TODO-list for amaroK
 
 SHORT-TERM:
 
+    * add: bug report dialog
+
+    * fix: save stream names in playlist, not just IP address (using #EXTINF)
+
     * fix: show bitrate/frequency also for streams
     
     * fix: <muesli> clean up the GUI
@@ -28,7 +32,7 @@ SHORT-TERM:
 
     * fix: app freezing when renaming the file that's currently playing
 
-    * fix: sample looping (annoying noise) @ end of track or pause
+    * fix: sample looping (annoying noise) @ end of track or pause (fixed?)
 
     * fix: redirected URLs do not work
 
@@ -42,11 +46,14 @@ SHORT-TERM:
 
 MID-TERM:
 
-    * change: can we make all buttons into actions? if we can, we could use setState(), a global actionCollection and save plenty of LOC. I see problems with the play/stop/etc buttons though.
+    * change: can we make all buttons into actions? if we can, we could use setState(), a global
+      actionCollection and save plenty of LOC. I see problems with the play/stop/etc buttons though.
 
-    * change: pre 1.0, big cleanup to reduce mem consumption (I dunno if we use a lot or not, but this is a good goal anyway!)
+    * change: pre 1.0, big cleanup to reduce mem consumption (I dunno if we use a lot or not, but
+      this is a good goal anyway!)
 
-    * change: pre 1.0, plan, cleanup and future-proof settings file keys. Will almost certainly mean that people will lose their settings, oh well, best to do it for the 1.0 release.
+    * change: pre 1.0, plan, cleanup and future-proof settings file keys. Will almost certainly
+      mean that people will lose their settings, oh well, best to do it for the 1.0 release.
 
     * add: <muesli> reading metadata on the fly (read for displayed playlist-items or onClick)
 
@@ -76,8 +83,6 @@ MID-TERM:
     * add: display type of media next to bitrate
 
     * change: select tracks on mouseup, not mousedown
-
-    * add: title streaming (mp3PlayObject needs to be patched)
 
     * add: save/load arts effects on close/startup automatically
 
@@ -117,10 +122,8 @@ IDEAS:
       scaled down bitmaps. Would look most cool when it could resize smoothly
       in realtime *drool*
 
-    * think about moving amarok to kdeextragear. this would get us access to the kde bug system
-      (and possibly something else), packaging and better visibility
+    * think about moving amarok to kdeextragear
 
     * using filelight (as a kpart maybe) for a graphical representation of the playlist. so you could
       see at first glance how the altogether playing time is divided into different albums, tunes and
       so on.
-
