@@ -1,0 +1,5 @@
+INCLUDES = $(all_includes) -I$(kde_includes)/taglib -I$(kde_includes)/arts
+METASOURCES = AUTO
+noinst_LIBRARIES =  libtitleproxy.a
+libtitleproxy_a_SOURCES =  titleproxy.cpp
+noinst_HEADERS =  titleproxy.h
